# frameworks/src/main/java/pt/com/francisco/frameworks/web/TaskRestController.java
@@ -11,6 +11,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
+import pt.com.francisco.entities.exceptions.TaskNotFoundException;
 import pt.com.francisco.interfaceadapters.controllers.TaskController;
 import pt.com.francisco.usecases.task.dto.TaskRequest;
 import pt.com.francisco.usecases.task.dto.TaskResponse;
@@ -52,6 +53,16 @@ public class TaskRestController implements TaskApi, TasksApi {
             return new ResponseEntity<>(taskResponse, HttpStatus.OK);
         }
         return new ResponseEntity<>(taskResponse, HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteTask(UUID id) {
+        try {
+            taskController.deleteTask(id);
+            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        } catch (TaskNotFoundException e) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
     }
 
     @Override
