# frameworks/src/main/resources/static/openapi.yaml
@@ -39,6 +39,20 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/TaskResponse'
+                '404':
+                    description: Task not found
+                '400':
+                    description: Invalid request
+                default:
+                    description: Unexpected error
+        delete:
+            description: returns a single task from the system
+            operationId: deleteTask
+            responses:
+                '204':
+                    description: Task deleted
+                '404':
+                    description: Task not found
                 '400':
                     description: Invalid request
                 default:
